@@ -9,7 +9,7 @@ import java.util.List;
 
 /**
  * Persistent PowerShell-based Windows voice synthesizer using System.Speech.
- * Matches ValNarrator implementation exactly.
+ * Matches ValorantNarrator implementation exactly - simplified and reliable.
  *
  * CRITICAL: Routes ONLY the PowerShell process to VB-CABLE, NOT the Java app!
  */
@@ -29,12 +29,8 @@ public class InbuiltVoiceSynthesizer {
             logger.error("Failed to start PowerShell process", e);
         }
 
-        // Initialize the SpeechSynthesizer ONCE and keep it in the PowerShell session
         try {
-            String initCommand = "Add-Type -AssemblyName System.Speech;$speak = New-Object System.Speech.Synthesis.SpeechSynthesizer;";
-            powershellWriter.println(initCommand);
-
-            String command = "$speak.GetInstalledVoices() | Select-Object -ExpandProperty VoiceInfo | Select-Object -Property Name | ConvertTo-Csv -NoTypeInformation | Select-Object -Skip 1; echo 'END_OF_VOICES'";
+            String command = "Add-Type -AssemblyName System.Speech;$speak = New-Object System.Speech.Synthesis.SpeechSynthesizer;$speak.GetInstalledVoices() | Select-Object -ExpandProperty VoiceInfo | Select-Object -Property Name | ConvertTo-Csv -NoTypeInformation | Select-Object -Skip 1; echo 'END_OF_VOICES'";
             powershellWriter.println(command);
 
             String line;
@@ -57,49 +53,27 @@ public class InbuiltVoiceSynthesizer {
             speakInbuiltVoice(voices.get(0), "Inbuilt voice synthesizer initialized.", (short) 100);
         }
 
-        // CRITICAL: Route ONLY PowerShell process to VB-CABLE (NOT Java app!)
+        // Route PowerShell process to VB-CABLE using SoundVolumeView.exe
         try {
-            String fileLocation = null;
-            File svvFile = null;
+            String fileLocation = String.format("%s/ValorantNarrator/SoundVolumeView.exe", System.getenv("ProgramFiles").replace("\\", "/"));
+            File svvFile = new File(fileLocation);
 
-            // Try multiple locations for SoundVolumeView.exe
-            String programFiles = System.getenv("ProgramFiles");
-            if (programFiles != null) {
-                // Try Program Files\ValVoice\ first
-                fileLocation = String.format("%s/ValVoice/SoundVolumeView.exe", programFiles.replace("\\", "/"));
-                svvFile = new File(fileLocation);
-
-                if (!svvFile.exists()) {
-                    // Try Program Files\ directly
-                    fileLocation = String.format("%s/SoundVolumeView.exe", programFiles.replace("\\", "/"));
-                    svvFile = new File(fileLocation);
-                }
-            }
-
-            // Try project directory (user.dir)
-            if (svvFile == null || !svvFile.exists()) {
+            // Try alternate location if not found
+            if (!svvFile.exists()) {
                 fileLocation = new File(System.getProperty("user.dir"), "SoundVolumeView.exe").getAbsolutePath();
                 svvFile = new File(fileLocation);
             }
 
-            if (svvFile != null && svvFile.exists()) {
+            if (svvFile.exists()) {
                 long pid = powershellProcess.pid();
-                // Use ProcessBuilder instead of deprecated Runtime.exec()
-                ProcessBuilder pb = new ProcessBuilder(
-                    fileLocation,
-                    "/SetAppDefault",
-                    "CABLE Input",
-                    "all",
-                    String.valueOf(pid)
-                );
-                pb.start();
-                logger.info("✓ PowerShell process (PID {}) routed to VB-CABLE using: {}", pid, fileLocation);
+                String command = fileLocation + " /SetAppDefault \"CABLE Input\" all " + pid;
+                Runtime.getRuntime().exec(command);
+                logger.info("✓ PowerShell process (PID {}) routed to VB-CABLE", pid);
             } else {
-                logger.warn("⚠ SoundVolumeView.exe not found! PowerShell TTS will NOT be routed to VB-CABLE.");
-                logger.warn("  Please place SoundVolumeView.exe in: {}", System.getProperty("user.dir"));
+                logger.warn("⚠ SoundVolumeView.exe not found - TTS will use default audio device");
             }
         } catch (IOException e) {
-            logger.error("SoundVolumeView.exe execution failed", e);
+            logger.error(String.format("SoundVolumeView.exe generated an error: %s", (Object) e.getStackTrace()));
         }
     }
 
@@ -115,17 +89,16 @@ public class InbuiltVoiceSynthesizer {
         rate = (short) (rate / 10.0 - 10);
 
         try {
-            // Escape single quotes in text for PowerShell string interpolation
+            // Escape single quotes for PowerShell
             String escapedText = text.replace("'", "''");
 
-            // Use the EXISTING $speak object - just set voice, rate, and speak
-            // This is MUCH faster than creating a new SpeechSynthesizer every time!
-            String command = String.format("$speak.SelectVoice('%s');$speak.Rate=%d;$speak.Speak('%s');", voice, rate, escapedText);
+            // Create new SpeechSynthesizer each time (ValorantNarrator approach)
+            String command = String.format("Add-Type -AssemblyName System.Speech;$speak = New-Object System.Speech.Synthesis.SpeechSynthesizer;$speak.SelectVoice('%s');$speak.Rate=%d;$speak.Speak('%s');", voice, rate, escapedText);
             powershellWriter.println(command);
 
-            logger.debug("✓ Sent TTS command to PowerShell: voice={}, rate={}, textLen={}", voice, rate, text.length());
+            logger.info("🔊 Speaking: voice='{}', rate={}, text='{}'", voice, rate, text.length() > 50 ? text.substring(0, 47) + "..." : text);
         } catch (Exception e) {
-            logger.error("Failed to speak text: {}", text, e);
+            logger.error("Failed to speak text", e);
         }
     }
 
@@ -151,3 +124,4 @@ public class InbuiltVoiceSynthesizer {
         }
     }
 }
+
